--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <a-plane position="0.73244 -18.98522 -4" rotation="-90 0 0" width="4" height="4" src="./fibras.jpeg" material="" geometry="" scale="50 50 50"></a-plane>
         <a-plane position="-2.83781 29.65035 4" rotation="90 0 0" width="4" height="4" src="./fibras.jpeg" material="" geometry="" scale="50 50 50"></a-plane>
+        <a-plane position="7.4498 20.04814 -3.22057" rotation="14.457444044536063 -45.02302354138009 107.96530212547667" width="4" height="4" src="./suelo.jpg" material="" geometry="primitive: torusKnot" scale="40 40 40"></a-plane>
         <a-assets>
             <video id="espacio1" autoplay loop="true" src="./espacios4.mp4"></video>
             <video id="espacio2" autoplay loop="true" src="./espacioss.mp4"></video>
@@ -22,6 +23,10 @@
           <a-video src="./espacios4.mp4" material="color: #dbc9b3" geometry="" scale="40 40 40" position="0 0 -20.163"></a-video>
           <a-video src="./espacioss.mp4" material="" geometry="" scale="40 40 40" position=" -39.908 0 0"></a-video>
           <a-video src="./espacioss1.mp4" material="" geometry="" scale="40 40 40" position=" 39.395 0 0"></a-video>
+
+          <a-sound src="src: url(sonidoblanco.mp3)" autoplay="true" position="26 1.6 49" volume="1"loop="true"></a-sound>
+
+          <a-entity camera="" position="26.34947 1.6 48.15816" wasd-controls="" rotation="" look-controls="" aframe-injected="" data-aframe-inspector-original-camera=""></a-entity>
     </a-scene>
         
     
