--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a-plane position="0.73244 -18.98522 -4" rotation="-90 0 0" width="4" height="4" src="./fibras.jpeg" material="" geometry="" scale="50 50 50"></a-plane>
         <a-plane position="-2.83781 29.65035 4" rotation="90 0 0" width="4" height="4" src="./fibras.jpeg" material="" geometry="" scale="50 50 50"></a-plane>
         <a-plane position="7.4498 20.04814 -3.22057" rotation="14.457444044536063 -45.02302354138009 107.96530212547667" width="4" height="4" src="./suelo.jpg" material="" geometry="primitive: torusKnot" scale="40 40 40"></a-plane>
-        <a-assets>
+        <a-assets timeout="60000" >
             <video id="espacio1" autoplay loop="true" src="./espacios4.mp4"></video>
             <video id="espacio2" autoplay loop="true" src="./espacioss.mp4"></video>
             <video id="espacio3" autoplay loop="true" src="./espacioss1.mp4"></video>
