--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
 
         </a-assets>
 
-        <a-entity material="color: #dbc9b3" geometry="primitive:plane;" position="0 0 -20.163" scale="40 40 40" material="shader:gif;src:url(./1.gif); ; transparent: true;alphaTest:0.5; side:double" ></a-entity>
-        <a-entity  material="color: #dbc9b3" geometry="primitive:plane;" position=" -39.908 0 0" scale="40 40 40" material="shader:gif;src:url(./2.gif); ; transparent: true;alphaTest:0.5; side:double" ></a-entity>
+        <a-entity  geometry="primitive:plane;" position="0 0 -20.163" scale="40 40 40" material="shader:gif;src:url(./1.gif); ; transparent: true;alphaTest:0.5; side:double" ></a-entity>
+        <a-entity  geometry="primitive:plane;" position=" -39.908 0 0" scale="40 40 40" material="shader:gif;src:url(./2.gif); ; transparent: true;alphaTest:0.5; side:double" ></a-entity>
         <a-entity  geometry="primitive:plane;" position=" 39.395 0 0"  scale="40 40 40" material="shader:gif;src:url(./3.gif); ; transparent: true;alphaTest:0.5; side:double" ></a-entity>
-        <a-entity  geometry="primitive:sphere; radius:3" position="0 0 -20.163" rotation="-92.67 .9.85 87.45" material="shader:gif;src:url(./assets/1.gif); ; transparent: true;alphaTest:0.5; side:double" ></a-entity>
-
 
         <!--
           <a-video src="./espacios4.mp4" material="color: #dbc9b3" geometry="" scale="40 40 40" position="0 0 -20.163"></a-video>
